Updated postgres version