@@ -16,6 +16,8 @@
 
     <properties>
         <java.version>21</java.version>
+        <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
+        <argLine>--enable-preview</argLine>
         <flyway.defaultSchema>app</flyway.defaultSchema>
     </properties>
 
